add_library(flow
    PacketPassFairQueue.c
    PacketPassPriorityQueue.c
    PacketPassInactivityMonitor.c
    PacketPassConnector.c
    PacketRecvConnector.c
    StreamRecvConnector.c
    PacketRecvBlocker.c
    PacketPassNotifier.c
    PacketBuffer.c
    SinglePacketBuffer.c
    PacketCopier.c
    PacketStreamSender.c
    KeepaliveIO.c
    SCKeepaliveSource.c
    StreamSocketSource.c
    StreamSocketSink.c
    DatagramSocketSource.c
    DatagramSocketSink.c
    PacketProtoEncoder.c
    PacketProtoDecoder.c
    FragmentProtoDisassembler.c
    SPProtoEncoder.c
    SPProtoDecoder.c
    FragmentProtoAssembler.c
    DataProtoKeepaliveSource.c
    PacketProtoFlow.c
    SinglePacketSender.c
    BufferWriter.c
    PacketPassInterface.c
    PacketRecvInterface.c
    StreamPassInterface.c
    StreamRecvInterface.c
    FlowError.c
    RouteBuffer.c
    PacketRouter.c
)
target_link_libraries(flow system security)
